# fool

./: Cargo.toml  README  README.md  go  index.html
src/: children.rs  color.rs  draw.rs  geometry.rs  lib.rs  log.rs  main.rs  perturbable.rs
src/draw/: fool.rs  margins.rs  rock.rs  sky.rs  star.rs  stars.rs  text.rs
src/element/: draw.rs  mod.rs
